language/move-lang/tests/move_check/parser/unicode/vertical_whitespace_in_line_comment.move
address 0x42 {
  // This line contains a `U+000D CARRIAGE RETURN`<
  module M { } so if line comments are terminated only<
               with `U+000A LINE FEED` then this text<
               would be part of the comment as well
}
